Changed ColumnReference to use a TableReference for whole columns.  This cleans up some of the autocomplete to avoid having to list the tables, and makes it easier to get a whole row as a single record (which otherwise would involve a lot of functions calls).